--- a/imclient/pages/search.html
+++ b/imclient/pages/search.html
@@ -20,7 +20,7 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title" style="right: 8px;">
-		    	<input id="search" type="number"  placeholder="请输入用户账号" style="margin-bottom: 0px;padding-right: 35px;">
+		    	<input id="search" type="number"  placeholder="请输入手机号" style="margin-bottom: 0px;padding-right: 35px;">
 		    	<span id="clear" class="mui-icon mui-icon-closeempty mui-hidden"></span>
 		    </h1>
 		</header>
@@ -28,7 +28,7 @@
 			<ul id="searchul" class="mui-table-view mui-hidden">
 		        <li class="mui-table-view-cell" id="searchuser">
 		        	<span class="mui-icon iconfont icon-yonghu" style="font-size: 20px;"></span>
-		        	找人：<span id="userid"></span></li>
+		        	找人：<span id="cellphone"></span></li>
 		    </ul>
 		</div>
 		<script src="../js/mui.min.js"></script>
@@ -43,35 +43,34 @@
 					if(clear.classList.contains("mui-hidden")){
 						clear.classList.remove("mui-hidden");
 					}
-					document.getElementById("userid").innerText=val;
+					document.getElementById("cellphone").innerText=val;
 				}else{
 					if(!clear.classList.contains("mui-hidden")){
 						clear.classList.add("mui-hidden");
 					}
-					document.getElementById("userid").innerText="";
+					document.getElementById("cellphone").innerText="";
 					document.getElementById("searchul").classList.add("mui-hidden");
 				}
 			});
 			clear.addEventListener("tap",function(){
 				clear.classList.add("mui-hidden");
 				searchinput.value="";
-				document.getElementById("userid").innerText="";
+				document.getElementById("cellphone").innerText="";
 				document.getElementById("searchul").classList.add("mui-hidden");
 			});
 			document.getElementById("searchuser").addEventListener("tap",function(){
 				var w = plus.nativeUI.showWaiting("正在搜索中...", {loading:{icon:"/images/waiting.png"}});
-				var uid = document.getElementById("userid").innerText;
+				var cellphone = document.getElementById("cellphone").innerText;
 				var flag=true;
 				setTimeout(function(){ if(flag){ w.close(); mui.toast("搜索失败");}},10000);
-				mui.post(sip+"getUser.do",{id:uid},function(data){
+				mui.post(sip+"getUserByU",{cellphone:cellphone},function(data){
 					flag=false;
-					if(data!=null&&data!="null"&&data!="[]"){
+					if(data && data.length>0){
 						w.close();
-						var userinfo = eval("("+data+")");
-						firejump("profile.html","toprofile",{userinfo:userinfo});
+						firejump("profile.html","toprofile",{userinfo:JSON.parse(data)[0]});
 					}else{
 						w.close();
-						mui.alert("该用户不存在");
+						mui.alert("该用户不存在","提示","确定",null,"div");
 					}
 				});
 			});
