--- a/imclient/pages/setting.html
+++ b/imclient/pages/setting.html
@@ -25,11 +25,14 @@
 				</li>
 			</ul>
 			<ul class="mui-table-view mui-table-view-chevron" style="margin-top: 15px;">
-				<li class="mui-table-view-cell">
-					<a href="#about" class="mui-navigate-right">关于我们 </a>
+				<li class="mui-table-view-cell" id="resetIP">
+					<a href="#" class="mui-navigate-right">重设服务器IP </a>
 				</li>
-				<li class="mui-table-view-cell">
-					<a href="#about" class="mui-navigate-right">检查更新 <i class="mui-pull-right update">V1.0.0</i></a>
+				<li class="mui-table-view-cell" id="aboutUs">
+					<a href="#" class="mui-navigate-right">关于我们 </a>
+				</li>
+				<li class="mui-table-view-cell" id="checkVersion">
+					<a href="#" class="mui-navigate-right">检查更新 <i class="mui-pull-right update">V1.0.0</i></a>
 				</li>
 			</ul>
 			<ul class="mui-table-view" style="margin-top: 15px;">
@@ -45,9 +48,21 @@
 				mui.confirm("确定退出当前账号？","提示",['取消', '确定'],function(e){
 					if(e.index==1){
 						window.localStorage.removeItem("user");
-						plus.runtime.quit();
+						if (mui.os.ios || mui.os.ipad || mui.os.iphone || mui.os.android) {
+							var curr = plus.webview.currentWebview();
+							var wvs = plus.webview.all();
+							for (var i = 0, len = wvs.length; i < len; i++) {
+								if (wvs[i].getURL() != curr.getURL()){
+									plus.webview.close(wvs[i]);
+								}
+							}
+							plus.webview.open('login.html');
+							curr.close();
+						} else {
+							plus.runtime.quit();
+						}
 					}
-				});
+				},'div');
 			});
 			mui.plusReady(function(){
 				var soundsex= window.localStorage.getItem("soundsex");
@@ -67,6 +82,21 @@
 			});
 			document.getElementById("girl").addEventListener("tap",function(){
 				window.localStorage.setItem("soundsex","女");
+			});
+			document.getElementById("resetIP").addEventListener("tap",function(){
+				mui.prompt('','请输入服务器IP地址','设置服务器',['确定','取消'],function(data){
+					if(data.index==0){
+						window.localStorage.setItem("sip","http://"+data.value+":8686/cgim/");
+						sip = window.localStorage.getItem("sip");
+						mui.toast("重设成功，当前访问地址："+sip);
+					}
+				},'div');
+			});
+			document.getElementById("aboutUs").addEventListener("tap",function(){
+				mui.alert("只需知道这是超哥开发的就行了！","关于我们","好的，哥！",null,"div");
+			});
+			document.getElementById("checkVersion").addEventListener("tap",function(){
+				mui.alert("我都不维护了，当前肯定是最新版本！","检查更新","好的，哥！",null,"div");
 			});
 		</script>
 	</body>
