--- a/imclient/pages/sub_personal.html
+++ b/imclient/pages/sub_personal.html
@@ -81,12 +81,12 @@
 				document.getElementById("username").innerHTML=user.name;
 				if(user.birthday!=undefined){
 					var age = new Date().getFullYear()-new Date(user.birthday).getFullYear();
-					document.getElementById("baseinfo").innerHTML=(user.gender||"")+"/"+age+"岁";
+					document.getElementById("baseinfo").innerHTML=(user.gender||"")+" "+age+"岁";
 				}
 				document.getElementById("signature").innerHTML=user.signature||"该用户较懒，未留下个性签名";
 				document.getElementById("address").innerHTML=user.address||"";
 				document.getElementById("hobby").innerHTML=user.hobby||"";
-				document.getElementById("userimg").src=sip+"getuimg.do?uid="+user.id;
+				document.getElementById("userimg").src=sip+"getuimg?uid="+user.id;
 			}
 		</script>
 	</body>
